Migrate to sdl 2.5.x and Java17
---------

Co-authored-by: pgruetter <patrick.gruetter@gmail.com>